@@ -1,3 +1,8 @@
+2014-02-04  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR ipa/60058
+	* g++.dg/torture/pr60058.C: New testcase.
+
 2014-02-04  Max Ostapenko  <m.ostapenko@partner.samsung.com>
 
 	* g++.dg/tsan/default_options.C: Invert check.
